<resources>
    <string name="app_name">My Application</string>
    <string name="prev1">TRAVEL COMPANY</string>
    <string name="prev2">Fast, easy, convenient</string>
    <string name="loginus">Log In</string>
    <string name="signupus">Dont have an account? Sign Up</string>
    <string name="register">Register</string>
    <string name="haveacc">Have an account? Log In</string>
    <string name="welcome">Welcome!</string>
    <string name="pegas">PEGAS</string>
    <string name="pricelist">PRICE LIST</string>
    <string name="RATING">RATING</string>
    <string name="pegas_content">PEGAS Touristik - один из лидеров российской туристической отрасли и одна из крупнейших международных туристических компаний. История компании началась в последней четверти ХХ века.</string>
    <string name="pegas_content1">PEGAS Touristik сегодня – это современная универсальная туристическая компания, которая предлагает широкий спектр услуг для всех групп клиентов, активно участвует в социальной и экономической жизни страны.</string>
    <string name="pegas_about">About company</string>
    <string name="pegas_country">India, Itali, Russia, China, Cuba</string>
    <string name="pegas_web">https://pegast.ru</string>
    <string name="pegas_phone">+7 (495) 287-87-87 / 8 800 700-87-47</string>


    <string-array name="array_country">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Angola</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Barbados</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Bhutan</item>
        <item>China</item>
        <item>Dominican</item>
        <item>Fiji</item>
        <item>France</item>
        <item>Germany</item>
        <item>Japan</item>
        <item>Russia</item>
        <item>Ukraine</item>
        <item>Uzbekistan</item>
        <item>USA</item>
        <item>Zimbabwe</item>
    </string-array>

    <string-array name="array_city_Russia">
        <item>Abakan</item>
        <item>Arhangelsk</item>
        <item>Belgorod</item>
        <item>Vladivostok</item>
        <item>Voronezh</item>
        <item>Ekaterenburg</item>
        <item>Izhevsk</item>
        <item>Irkutsk</item>
        <item>Kazan</item>
        <item>Kaluga</item>
        <item>Kemerovo</item>
        <item>Kirov</item>
        <item>Kursk</item>
        <item>Magadan</item>
        <item>Moscow</item>
        <item>Murmansk</item>
        <item>Novosibirsk</item>
        <item>Omsk</item>
        <item>Orel</item>
        <item>Penza</item>
        <item>Yakutsk</item>
    </string-array>

    <string-array name="array_travel_country">
        <item>China</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>Vietnam</item>
    </string-array>

    <string-array name="Travel_agencies">
        <item>Pegas</item>
        <item>Kem-Tur</item>
        <item>Gran Fiesta</item>
    </string-array>
</resources>
