<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mrsteve.myapplication.PegasActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true"
            >

            <ImageView
                app:layout_collapseMode="parallax"
                android:background="@drawable/bgr"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="350dp" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:title="@string/pegas"
                app:layout_collapseMode="pin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_marginLeft="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/travelic" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pricelist"
                        android:textColor="@color/white"
                        android:textSize="30dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10000 - 20000"
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:textSize="30dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/RATING"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:textSize="30dp"/>

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/white"
                        android:textSize="30dp"/>

                </LinearLayout>


            </LinearLayout>


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>
    
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PEGAS"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="12dp"
                    android:padding="12dp"
                    android:textColor="@color/black"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp">


                    <ImageButton
                        android:id="@+id/facebook"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:onClick="opfacebook"
                        android:background="@drawable/facebookic"
                        />

                    <ImageButton
                        android:id="@+id/youtube"
                        android:layout_marginLeft="10dp"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:onClick="opyoutube"
                        android:background="@drawable/youtubeic" />

                    <ImageButton
                        android:id="@+id/twitter"
                        android:layout_marginLeft="10dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:onClick="optwitter"
                        android:background="@drawable/twitteric" />

                    <ImageButton
                        android:id="@+id/browser"
                        android:layout_marginLeft="10dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:onClick="opbrowser"
                        android:background="@drawable/webic" />


                </LinearLayout>
                
                <com.hsalf.smilerating.SmileRating
                    android:id="@+id/smile_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="30dp">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/mobileic"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pegas_phone"
                            android:textSize="20dp"
                            android:textColor="@color/black"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="10dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        >

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/travelico"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pegas_country"
                            android:textSize="20dp"
                            android:textColor="@color/black"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="10dp"
                            />

                    </LinearLayout>



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pegas_about"
                            android:textColor="@color/black"
                            android:textSize="30dp"
                            android:layout_marginTop="25dp"
                            />

                        <View
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:background="@drawable/shape_rectblack"></View>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/black"
                        android:text="@string/pegas_content"
                        />

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:paddingBottom="80dp"
                        android:text="@string/pegas_content1"
                        />


                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>
    
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:src="@drawable/ic_fav"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        />

</android.support.design.widget.CoordinatorLayout>
