<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mrsteve.myapplication.MainActivity"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center|bottom"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prev1"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@drawable/shape_rect"></View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prev2"
                    android:textColor="@color/white"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/mountains2" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/mountains1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="10dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                    android:layout_marginRight="20dp"
                    app:srcCompat="@drawable/user" />

                <EditText
                    android:id="@+id/EditTextUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:background="@drawable/linetext"
                    android:paddingBottom="25dp"
                    android:paddingLeft="5dp"
                    android:layout_marginTop="7dp"
                    android:hint="User gmail"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp">


                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/password"/>

                <EditText
                    android:id="@+id/EditTextPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:background="@drawable/linetext"
                    android:paddingBottom="25dp"
                    android:layout_marginTop="7dp"
                    android:paddingLeft="5dp"
                    android:hint="Password"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="35dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp">
                <Button
                    android:id="@+id/btnnext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loginus"
                    android:background="@drawable/buttondesign"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/tcl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signupus"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/textdark"
                    android:clickable="true"
                    android:onClick="clickText"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
